--- a/HomesideHeroes/Views/Shared/_Layout.cshtml
+++ b/HomesideHeroes/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
     </div>
     <div class="container body-content">
         @RenderBody()
+
+        <canvas id="myChart" width="400" height="400"></canvas>
+
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
@@ -36,6 +39,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/app")
     @RenderSection("scripts", required: false)
 </body>
 </html>
