--- a/HomesideHeroes/Content/Site.css
+++ b/HomesideHeroes/Content/Site.css
@@ -1,17 +1,9 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    padding: 30px;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+.panel-heading {
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
 }
