Throwin' down some caaarrrddss

--- a/HomesideHeroes/Views/Shared/_Layout.cshtml
+++ b/HomesideHeroes/Views/Shared/_Layout.cshtml
@@ -11,7 +11,9 @@
 
     @RenderBody()
 
-    @Scripts.Render("~/bundles/jquery")
+    <a href="https://bootswatch.com/cyborg/">Theme Toolkit</a>
+
+@Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/app")
     @RenderSection("scripts", required: false)
