--- a/HomesideHeroes/Views/Home/Index.cshtml
+++ b/HomesideHeroes/Views/Home/Index.cshtml
@@ -1,1 +1,30 @@
-﻿<canvas id="myChart" width="400" height="400"></canvas>
+﻿<div class="container-fluid">
+    <div class="row">
+
+        <!--  -->
+        <div class="col-md-6">
+
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <h1 class="panel-heading">Pluralsight Usage in Minutes</h1>
+                    <canvas id="myChart" width="400" height="200"></canvas>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- -->
+        <div class="col-md-6">
+            
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <h1 class="panel-heading">Pluralsight Usage in Minutes</h1>
+                    Hello
+                </div>
+            </div>
+
+        </div>
+
+
+    </div> <!-- /row -->
+</div> <!-- /container -->
